--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,16 @@
 ::-moz-selection{
     background: rgba(10, 199, 139, 0.3);
 }
+p.MsoNormal, li.MsoNormal, div.MsoNormal{
+	mso-style-unhide:no;
+	mso-style-qformat:yes;
+	mso-style-parent:"";
+	margin:0cm;
+	margin-bottom:.0001pt;
+	mso-pagination:widow-orphan;
+	font-size:12.0pt;
+	font-family:'Muli',sans-serif;
+}
 div, span, h1, h2, h3, h4, h5, p, a, ul, li{
     font:inherit
 }
