--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ body{
 .align-center{
     text-align:center
 }
-@media (max-width: 767px){
+@media (max-width: 636px){
     .align-left, .align-center{
         text-align:center
     }
@@ -535,32 +535,6 @@ body{
     font-family:'Muli',sans-serif;
     font-size:1.3rem;
     line-height:1.6
-}
-@media (max-width: 768px){
-    .display-1{
-        font-size:2.5rem;
-        font-size:calc( 2.5rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20)));
-        line-height:calc( 1.4 * (1.91rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20))))
-    }
-    .display-2{
-        font-size:1.96rem;
-        line-height:calc( 1.4 * (1.5075rem + (2.45 - 1.5075) * ((100vw - 20rem) / (48 - 20))))
-    }
-    .display-4{
-        font-size:0.8rem;
-        font-size:calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
-        line-height:calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))))
-    }
-    .display-5{
-        font-size:1.6rem;
-        font-size:calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
-        line-height:calc( 1.4 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))))
-    }
-    .display-7{
-        font-size:1.04rem;
-        font-size:calc( 1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20)));
-        line-height:calc( 1.4 * (1.105rem + (1.3 - 1.105) * ((100vw - 20rem) / (48 - 20))))
-    }
 }
 .btn{
     padding:14px 30px;
@@ -957,13 +931,18 @@ a.text-white:hover, a.text-white:focus{
     }
 }
 .cid-rvslRdlL72{
-    padding-top:3rem;
-    padding-bottom:3rem;
     background-color:#ffffff
 }
-
-.cid-rvslRdlL72 .custom-header-img{
-    height:500px;
+.cid-rvslRdlL72 .featured-img-padding{
+    margin-right: 100px
+}
+@media (max-width: 800px){
+    .cid-rvslRdlL72 .featured-img-padding{
+        margin-right: 0px
+    }
+}
+.cid-rvslRdlL72 .feature-img{
+    height:550px;
     width:auto;
 }
 .cid-rvslRdlL72 H1{
@@ -973,11 +952,27 @@ a.text-white:hover, a.text-white:focus{
     color:#f1f1f7
 }
 .cid-rvslRdlL72 .row{
-    display:table-row
+    display:block
 }
 .cid-rvslRdlL72 .col-left, .cid-rvslRdlL72 .col-right{
-    display:table-cell;
+    display:inline-block;
     vertical-align:middle
+}
+.cid-rvslRdlL72 .switch-off{
+    display: inline-block
+}
+@media (max-width: 800px){
+    .cid-rvslRdlL72 .switch-off{
+        display: none
+    }
+}
+.cid-rvslRdlL72 .switch-on{
+    display: none
+}
+@media (max-width: 800px){
+    .cid-rvslRdlL72 .switch-on{
+        display: inline-block
+    }
 }
 .vertical-download{
     display:none;
