--- a/styles.css
+++ b/styles.css
@@ -536,6 +536,13 @@ body{
     font-size:1.3rem;
     line-height:1.6
 }
+@media (max-width: 768px){
+    .display-1{
+        font-size:2.5rem;
+        font-size:calc( 2.5rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20)));
+        line-height:calc( 1.4 * (1.91rem + (3.6 - 1.91) * ((100vw - 20rem) / (48 - 20))))
+    }
+}
 .btn{
     padding:14px 30px;
     border-radius:true
